bugfix: Bump up the z-index on the app-wrapper (#17010) (#17038)
This prevents context-menus from displaying behind the sidbar.

Fixes #16305

--- a/src/ui/public/chrome/directives/kbn_chrome.less
+++ b/src/ui/public/chrome/directives/kbn_chrome.less
@@ -11,7 +11,7 @@ body { overflow-x: hidden; }
   top: 0;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 5;
   margin: 0 auto;
   background-color: #fff;
 
